--- a/仿站/robot/css/style.css
+++ b/仿站/robot/css/style.css
@@ -2,6 +2,7 @@ body {
     position: relative;
     padding-top: 98px;
     padding-bottom: 725px;
+    background: #fff;
 }
 
 @media (max-width: 766px) {
@@ -392,6 +393,17 @@ img {
     color: #fff;
     border-color: #024C92;
     background: #024C92;
+}
+
+
+@media (max-width: 766px) {
+    .btn-item > .btn {
+        margin: 0 5px;
+        padding: 9px 10px;
+        border: 1px solid #ccc;
+        color: #666;
+        background: #fff;
+    }
 }
 
 .news-items {
