简历优化，新增中山眼科项目经历，新增小程序二维码

--- a/resume/css/iconfont.css
+++ b/resume/css/iconfont.css
@@ -77,6 +77,6 @@
 .icon-evaluate:before,
 .icon-xiangmu:before {
   position: relative; left: -20px; font-size: 30px; 
-  color: #A4C2DE;
+  color: #29B6F6;
 }
 
