--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -61,7 +61,7 @@ strong {
 }
 
 .aside .content {
-	margin-top: 60px;
+	margin-top: 10px;
 }
 
 .aside .content h2 {
@@ -99,7 +99,7 @@ strong {
 }
 
 
-.aside .content .contact span {
+.aside .content .contact > .contact-item {
 	display: block;
 	text-align: left;
 	margin-left: 15%;
@@ -123,7 +123,7 @@ strong {
 }
 
 .aside .content .mini-resume {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .aside .content .mini-resume img {
