--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -143,6 +143,22 @@ strong {
     padding-bottom: 20px;
 }
 
+.main .demo-item {
+    position: relative;
+}
+
+.main .demo-item .qrcode-box {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.main .demo-item .qrcode-box img {
+    width: 80px;
+    height: 80px;
+}
+
 /*二维码盒子*/
 .aside .content .quick-mark {
     vertical-align: middle;
