样式间距调整

--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -147,6 +147,10 @@ strong {
     position: relative;
 }
 
+.main .demo-item .demo-detail {
+    margin-top: 8px;
+}
+
 .main .demo-item .qrcode-box {
     position: absolute;
     top: 0;
